--- a/static/css/main/positionDetail.css
+++ b/static/css/main/positionDetail.css
@@ -69,7 +69,7 @@ html, body, header, nav, aside, main, article, section, footer, h1, h2, h3, h4, 
     padding: 0px;
 }
 
-header{
+.topHeader{
     position: fixed;
     top: 0px;
     left: 0px;
@@ -1203,4 +1203,366 @@ li>.btns{
     left: calc(50% + 190px);
     top: 220px;
     width: 470px;
+}
+
+.applyTitle{
+    padding: 9px 24px;
+    background-color: rgb(51, 51, 51);
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+.applyTitle>h1{
+    width: calc(100% - 36px);
+    font-size: 15px;
+    line-height: 22px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    overflow-wrap: break-word;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+}
+
+.applyCloseBtn{
+    position: absolute;
+    top: 10px;
+    right: 24px;
+}
+
+.applyCloseBtn>svg{
+    width: 20px;
+    height: 20px;
+}
+
+.formMain{
+    padding: 24px 23px;
+    overflow-y: auto;
+    flex-grow: 1;
+    border-right: 1px solid rgb(153, 153, 153);
+    border-left: 1px solid rgb(153, 153, 153);
+    border-image: initial;
+    border-bottom: none;
+    border-top: none;
+    height: calc(-300px + 100vh);
+    max-height: calc(-308px + 100vh);
+}
+
+.applyForm>main{
+    padding: 0px 23px 24px;
+}
+
+.formSubmitBtn{
+    position: fixed;
+    bottom: 0px;
+    left: calc(50% + 190px);
+    width: 470px;
+}
+
+.formWrapper{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background: rgb(255, 255, 255);
+    border-radius: unset;
+    padding-top: 0px;
+}
+
+.formElement{
+    margin-top: 24px;
+}
+
+.formElement.first>h1{
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 2px;
+}
+
+.formElement.first>p{
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    color: rgb(102, 102, 102);
+    overflow-wrap: break-word;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+}
+
+.formElement.last{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.accountTitle{
+    display: flex;
+    justify-content: space-between;
+}
+
+.accountTitle>h2{
+    font-size: 16px;
+    line-height: 24px;
+    color: rgb(34, 34, 34);
+}
+
+.accountInfo{
+    margin-top: 10px;
+    padding: 16px;
+    border: 1px solid rgb(228, 228, 228);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.accountInfo>li{
+    display: flex;
+}
+
+.accountInfo>li>.title{
+    flex-shrink: 0;
+    width: 52px;
+    margin-right: 24px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    color: rgb(68, 68, 68);
+}
+
+.accountContent{
+    flex-grow: 1;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    line-height: 22px;
+}
+
+.accountInfo>li a{
+    flex-shrink: 0;
+    display: flex;
+}
+
+.accountInfo>li a> svg{
+    margin-left: 4px;
+    width: 20px;
+    height: 20px;
+}
+
+.resumeTitle{
+    display: flex;
+    justify-content: space-between;
+}
+
+.resumeTitle>h2{
+    font-size: 16px;
+    line-height: 24px;
+    color: rgb(34, 34, 34);
+}
+
+.resumeTitle>span{
+    color: rgb(68, 68, 68);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+
+.resumeTitle>span>em{
+    color: rgb(7,215,109);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+
+.mustRedDot::after{
+    display: inline-block;
+    margin: 0px 0px 4px 6px;
+    content: "";
+    width: 6px;
+    height: 6px;
+    background-color: rgb(240, 68, 82);
+    border-radius: 3px;
+}
+
+.resumeContent{
+    position: relative;
+    padding: 16px;
+    border: 1px solid rgb(228, 228, 228);
+    border-radius: 8px;
+    margin-top: 8px;
+    cursor: pointer;
+}
+
+.resumeContent:first-child{
+    margin-top: 0px;
+}
+
+.resumeContent>div{
+    display: flex;
+    align-items: baseline;
+}
+
+.resumeInfo{
+    margin-left: 32px;
+}
+
+.resumeContent>div input[type="radio"], .resumeContent>div input[type="checkbox"]{
+    position: absolute;
+    top: 22px;
+    left: 16px;
+    width: 16px;
+    height: 16px;
+    border: 2px solid rgb(196, 196, 196);
+    background-color: rgb(255, 255, 255);
+    outline: none;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.resumeContent>div input[type="radio"]{
+    border-radius: 16px;
+}
+
+.resumeContent>div input[type="radio"]:checked{
+    border: 5px solid rgb(0, 221, 109);
+    background-color: white;
+}
+
+.resumeInfo>h3{
+    width: 280px;
+    overflow-wrap: break-word;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    margin-bottom: 4px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    color: rgb(34, 34, 34);
+}
+
+.resumeInfo>ul{
+    display: flex;
+    margin-bottom: 8px;
+}
+
+.resumeInfo>ul>li{
+    position: relative;
+    margin-right: 24px;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(102, 102, 102);
+}
+
+.resumeInfo>p{
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+}
+
+.resumeInfoWrapper{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.resumeSkill::after{
+    position: absolute;
+    top: 7px;
+    right: -9px;
+    width: 4px;
+    height: 4px;
+    border-radius: 4px;
+    background-color: rgb(240, 68, 82);
+    box-sizing: border-box;
+    content: "";
+}
+
+.resumeFixBtn{
+    position: absolute;
+    bottom: 12px;
+    right: 12px;
+}
+
+.resumeFixBtn a, .resumeFixBtn button{
+    margin-left: 12px;
+    padding: 4px 4px 0;
+}
+
+.resumeFixBtn a>svg, .resumeFixBtn button>svg{
+    width: 20px;
+    height: 20px;
+}
+
+.resumeFixBtn a>svg>path, .resumeFixBtn button>svg>path{
+    fill: rgb(153, 153, 153);
+}
+
+.resumeFixBtn a:hover > svg > path, .resumeFixBtn button:hover > svg > path {
+    fill: rgb(0, 221, 109);
+}
+
+.resumeNullMessage{
+    position: absolute;
+    top: 40px;
+    left: 0px;
+    width: calc(100% - 30px);
+    height: 48px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-width: 0px 0px 0px 1px;
+    border-top-style: initial;
+    border-right-style: initial;
+    border-bottom-style: initial;
+    border-top-color: initial;
+    border-right-color: initial;
+    border-bottom-color: initial;
+    border-image: initial;
+    border-left-style: solid;
+    border-left-color: rgb(153, 153, 153);
+    z-index: 2;
+    padding: 16px 14px 0px;
+}
+
+.resumeReLink{
+    display: flex;
+    padding: 13px 24px;
+    background-color: rgb(254, 236, 238);
+    border: 1px solid rgb(253, 219, 222);
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 16px;
+    box-sizing: border-box;
+}
+
+.resumeReLink svg{
+    width: 20px;
+    height: 20px;
+}
+
+.redWindowText{
+    flex: 1 1 70%;
+    margin-left: 5px;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(34, 34, 34);
+    font-weight: 400;
+}
+
+.redWindowText span{
+    color: rgb(240, 68, 82);
+    font-weight: 700;
+}
+
+.attachTitle{
+    display: flex;
+    justify-content: space-between;
 }
